﻿===

jAnrufmonitor 5.0.42 (01.08.2013)
---------------------------------

Neu:
- Installer: Prüfung auf 32-bit und 64-bit Architektur

Bugfix:
- Vorwahldatei: Aktualisierte Vorwahldatei für Deutschland (Bundesnetzagentur Update 2013)
- Vorwahldatei: Unicodeschreibweise von Orten korrigiert

Module:
- LDAP-basiertes Adressbuch: Korrektur von Umlautdarstellungen
- LDAP-basiertes Adressbuch: UTF-8 und Latin-1 Unterstützung
- LDAP-basiertes Adressbuch: Base64-Kodierung Unterstützung
- LDAP-basiertes Adressbuch: Unterstützung für mehrere Base DNs

===

jAnrufmonitor 5.0.41 (15.06.2013)
---------------------------------

Bugfix:
- Dialog: Größenberechnung des Dialoges korrigiert
- Sprachdatei: Session is closed Fehler behoben
- Tray: Platzhalter werden bei Info- und Warnhinweisen nicht ersetzt
- Console: NoClassDefFoundError nach einem Modul-Update
- Update-Manager: Tray Icon zeigt keinen Komponententitel an

Module:
- Fritz!Box-Überwachung: Sicherheitslücke beim Anmelden mit Benutzername/Passwort behoben
- Fritz!Box-Überwachung: Wählhilfe speichert die letzten 10 angwählten Rufnummern
- Fritz!Box-Überwachung: Änderungen am Zähler für Wiederverbindungen
- Fritz!Box-Überwachung: Icon Status bei eingeschränkter Funktion wird falsch gesetzt
- Telefonauskunft Modul Assistent: Zeichenkodierung hinzugefügt
- Google Kontakte: Auf Google Contacts API v3 umgestellt
- Google Kontakte: Identifizierungsproblem bei Kontaktem mit mehreren Rufnummern behoben
- Erweiterung zur Google Maps Lokalisierung: Schreibfehler in Konfigurationsdialog beseitigt
- LDAP-basiertes Adressbuch: Scope-Suche hinzugefügt
- LDAP-basiertes Adressbuch: Unterstützung für mehrere Base DN
- tel.search.ch: Zeichenkodierung angepasst

===

jAnrufmonitor 5.0.40 (01.06.2013)
---------------------------------

Neu:
- Kontakte/Journal: Land als Flagge darstellbar
- Kontakte/Journal: Telefonbuch als Logo darstellbar
- Kontakte: Freitext-Spalte einem Kontakt zuweisen