@@ -21,6 +21,9 @@ ui.jface.application.editor.Editor\:view\:label\:de=Ansicht
 ui.jface.application.editor.Editor\:contact\:label\:de=Kontakt
 ui.jface.application.editor.Editor\:view_intarea\:label\:de=L\u00E4ndercode 
 ui.jface.application.editor.Editor\:view_ln\:label\:de=Nachname 
+ui.jface.application.editor.Editor\:view_city\:label\:de=Stadt/Gemeinde 
+ui.jface.application.editor.Editor\:view_pcode\:label\:de=Postleitzahl 
+ui.jface.application.editor.Editor\:view_cntry\:label\:de=Land 
 ui.jface.application.editor.Editor\:view_area\:label\:de=, Ortsnetzkennzahl 
 ui.jface.application.editor.Editor\:current_view\:label\:de=Aktuelle Ansicht: 
 ui.jface.application.editor.Editor\:selected\:label\:de=markierte Kontakte
